tests/baselines/reference/multipleExportDefault6.errors.txt
multipleExportDefault6.ts(1,1): error TS2528: A module cannot have multiple default exports.
multipleExportDefault6.ts(5,1): error TS2528: A module cannot have multiple default exports.


==== multipleExportDefault6.ts (2 errors) ====
    export default {
    ~~~~~~~~~~~~~~~~
        lol: 1
    ~~~~~~~~~~
    }
    ~
!!! error TS2528: A module cannot have multiple default exports.
!!! related TS2753 multipleExportDefault6.ts:5:1: Another export default is here.
    
    export default {
    ~~~~~~~~~~~~~~~~
        lol: 2
    ~~~~~~~~~~
    }
    ~
!!! error TS2528: A module cannot have multiple default exports.
!!! related TS2752 multipleExportDefault6.ts:1:1: The first export default is here.